# Multimodal-Autonomous-Web-Systems-Repair-through-Feedback

./: README.md  graph.py  main.py  pyproject.toml  test_functional.py  test_integration.py
agents/: executor.py  planner.py  rag_analyzer.py
artifacts/: patch_state.json  rag_analysis.md
artifacts/backups/: cart.html  index.html
core/: state.py
mawsr/: __init__.py  cli.py  dashboard.py  service.py
mawsr/static/: dashboard.html
test/: cart.html  conftest.py  index.html  review.html  test_integration.py  test_nonfunctional.py  test_unit.py
test/artifacts/: rag_analysis.md
utils/: browser_tools.py  patch_engine.py
