[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mawsr"
version = "0.1.0"
description = "Multimodal Autonomous Web Systems Repair library and dashboard"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MAWSR Contributors" }
]
dependencies = [
  "flask>=3.0.0",
  "flask-cors>=4.0.0",
  "python-dotenv>=1.0.0",
  "langgraph>=0.2.0",
  "langchain-openai>=0.2.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-text-splitters>=0.3.0",
  "langchain-huggingface>=0.1.0",
  "faiss-cpu>=1.9.0",
  "sentence-transformers>=3.0.0",
  "mcp>=1.0.0",
  "playwright>=1.48.0"
]

[project.scripts]
mawsr-dashboard = "mawsr.cli:main"

[tool.setuptools]
include-package-data = true
py-modules = ["graph", "main"]

[tool.setuptools.package-data]
mawsr = ["static/*.html"]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "core*", "utils*", "mawsr*"]
